# coding-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.agents/skills/testing-shrek-agent/: SKILL.md
.github/workflows/: ci.yml
shrek_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  console.py  mcp_server.py  prompts.py
shrek_agent/tools/: __init__.py  base.py  edit_file.py  list_files.py  read_file.py  run_bash.py  search_files.py  write_file.py
tests/: conftest.py  test_agent.py  test_config.py  test_edit_file.py  test_list_files.py  test_mcp_server.py  test_read_file.py  test_run_bash.py  test_search_files.py  test_write_file.py
