[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "shrek-agent"
version = "0.1.0"
description = "ShrekAgent — Claude Code-ga o'xshash terminal coding agent (Python)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Muhammaddiyor Tolibjonov", email = "mtd.coder@gmail.com" }]
keywords = ["claude", "anthropic", "agent", "coding-agent", "llm", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.39",
    "pydantic>=2.6",
    "rich>=13.7",
    "prompt-toolkit>=3.0.43",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-setuptools",
]

[project.scripts]
shrek = "shrek_agent.cli:app"
shrek-agent = "shrek_agent.cli:app"

[project.urls]
Homepage = "https://github.com/Muhammaddiyor2002/coding-agent"
Repository = "https://github.com/Muhammaddiyor2002/coding-agent"
Issues = "https://github.com/Muhammaddiyor2002/coding-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["shrek_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line too long (formatter handles it)
    "B008",   # function calls in default args (typer/pydantic)
    "RUF001", # ambiguous unicode in strings (intentional UI glyphs)
    "RUF002", # ambiguous unicode in docstrings
    "RUF003", # ambiguous unicode in comments
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = false
exclude = ["build/", "dist/", ".venv/"]

[[tool.mypy.overrides]]
module = ["prompt_toolkit.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["error"]
